--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Abril+Fatface&family=Comfortaa:wght@600&family=Nixie+One&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <meta property="og:title" content="pocoloco.io - designer dynamic backgrounds" /> 
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pocoloco.io" />
+    <meta property="og:image" content="https://pocoloco.io/landing.jpg" />
+    <meta property="og:description" content="Tired of static backgrounds for your website? Use this to build dynamic backgrounds like Stripe's beautiful gradient canvas!" />
   </head>
   <body>
     <noscript>
