Update UI and Mesh

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://pocoloco.io" />
     <meta property="og:image" content="https://pocoloco.io/landing.jpg" />
     <meta property="og:description" content="Tired of static backgrounds for your website? Use this to build dynamic backgrounds like Stripe's beautiful gradient canvas!" />
+    <script src="https://cdn.jsdelivr.net/gh/greentfrapp/pocoloco/minigl.js"></script>
   </head>
   <body>
     <noscript>
